_sass/theme/_base.scss
// Font Families
$main-ff: 'Open Sans', sans-serif;
$site-name-ff: 'Audiowide', cursive;
$title-ff: 'Roboto', sans-serif;
$code-ff: 'Roboto Mono', monospace;
// Borders
$border-table-style: 1px solid var(--site-color-scheme);

$border-rad: 8px;

body {
    background-color: var(--body-bg);
    max-width: 900px;
    padding: 14px;
    margin: auto;
}

a,
button,
div,
p,
ul,
li,
time {
    font-family: $main-ff;
    font-size: 1rem;
    color: var(--main-fg);
}

h1 {
    text-align: center;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: $title-ff;
    font-weight: normal;
    color: var(--main-fg);
}

a,
a:visited {
    color: #2a7ae2;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.feather {
    height: 24px;
    width: 24px;
    stroke: var(--main-fg);
    stroke-width: 2;
    stroke-linecap: round;
    stroke-linejoin: round;
    fill: none;
}

header.body-header {
    display: flex;
    align-items: center;
    border-bottom: 5px solid var(--site-color-scheme);

    .site-title {
        margin: 1.35rem auto 1.35rem 0;

        a {
            font-family: $site-name-ff;
            font-size: 1.65rem;
        }
    }

    a {
        color: var(--main-fg);
    }

    a:visited {
        color: var(--main-fg);
    }

    nav {
        display: flex;
        gap: 15px;
        align-items: center;
    }
}

.panel {
    margin: 1rem 0;
    background-color: var(--sub-bg);
    border-radius: $border-rad;
    padding: 1rem;
}

pre {
    overflow-x: auto;
}

pre.highlight {
    padding: 8px 12px;

    code {
        padding: 0;
    }
}

code {
    padding: 1px 5px;
}

pre.highlight,
code {
    font-family: $code-ff;
    font-weight: bold;
    font-size: .86rem;
    border-radius: $border-rad;
    background-color: var(--sub3-bg);
}

blockquote {
    color: var(--faded-fg);
    border-left: 6px solid var(--site-color-scheme);
    margin: 0;
    padding-left: 15px;
    letter-spacing: -1px;
    font-style: italic;
}

table {
    width: 100%;
    border-collapse: collapse;
    border-bottom: 4px solid var(--site-color-scheme);
    margin: 10px 0;

    thead {
        background-color: var(--site-color-scheme);
        color: white;
    }

    thead tr :first-child {
        border-top-left-radius: $border-rad;
    }

    thead tr :last-child {
        border-top-right-radius: $border-rad;
    }

    thead th {
        padding: 10px;
    }

    tbody tr td {
        border-bottom: $border-table-style;
        border-right: $border-table-style;
    }

    tbody tr :last-child {
        border-right: none;
    }

    tbody tr:last-child>td {
        border-bottom: none;
    }

    tbody tr td {
        padding: 8px;
    }
}

img {
    max-width: 100%;
}

.posts {
    display: grid;
    grid-template-columns: repeat(3, auto);
    gap: 20px;

    article {
        padding: 20px;
        background-color: var(--sub2-bg);
        border-radius: $border-rad;
    }

    article:hover {
        transition-duration: 500ms;
        background-color: darkgrey;
    }

    time {
        color: var(--faded-fg);
        font-size: 0.9em;
    }

    p {
        background-color: var(--sub2-bg);
    }
}

.post header {
    margin-bottom: 30px;

    h1 {
        font-size: 2.4em;
        margin-bottom: 18px;
        margin-top: 10px;
    }

    .meta {
        display: flex;
        flex-direction: column;
        gap: 5px;
        color: var(--faded-fg);
        font-size: 0.9em;
        align-items: center;
    }
}

ol.breadcrumb {
    padding: 10px;
    list-style: none;

    >li {
        display: inline-block;
    }

    >li+li:before {
        padding: 0 5px;
        content: "/";
        color: var(--faded-fg);
    }

    li.active {
        color: var(--faded-fg);
        user-select: none;
    }
}

footer {
    display: flex;
    flex-direction: column;
    gap: 10px;
    text-align: center;
    margin-top: 50px;
    padding-top: 10px;
    border-top: 1px solid lightgrey;

    h1 {
        font-size: 1.2em;
        margin: 0;
    }
}

#skip-to-main-bnt {
    position: absolute;
    width: 1px;
    height: 1px;
    left: -1000px;
    overflow: hidden;
}

#skip-to-main-bnt:focus,
#skip-to-main-bnt:active {
    width: unset;
    height: unset;
    left: unset;
    font-size: large;
    padding: 10px;
    background-color: red;
    color: white;
    text-decoration: underline;
}

#theme-toggle-bnt {
    cursor: pointer;
    border: none;
    padding: 0;
    background-color: unset;
    display: flex;
}

#theme-toggle-bnt.hidden {
    display: none;
}

#theme-toggle-bnt svg {
    height: 2rem;
    transition: 400ms;
}

#theme-toggle-bnt svg:hover {
    stroke: grey;
}

#theme-picker-selector {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: .3rem;
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    background-color: #00000091;
    backdrop-filter: blur(4px);
    width: 100%;
    height: 100%;
    border: none;
}

#theme-picker-selector button {
    border: none;
    border-radius: $border-rad;
    padding: 1rem 2rem;
    transition: 400ms;
    cursor: pointer;
}

#theme-picker-selector button.active {
    background-color: var(--site-color-scheme);
}

#theme-picker-selector button:hover {
    background-color: grey;
}

#to-top-bnt {
    position: fixed;
    bottom: 1rem;
    right: 1rem;
    background-color: var(--sub3-bg);
    padding: .8rem;
    border-radius: $border-rad;
    display: none;
    animation: fade-in 400ms;
}

@keyframes fade-in {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.page-anchor {
    display: none;
    padding-left: .5rem;
}

:is(h1, h2, h3, h4, h5, h6):hover .page-anchor {
    display: initial;
}

// Different Screen Sizes
@media(max-width: 800px) {
    .posts {
        grid-template-columns: repeat(2, auto);
    }
}

@media(max-width: 600px) {
    header.body-header h1 {
        margin-right: initial;
    }

    header.body-header,
    header.body-header nav {
        text-align: center;
        flex-direction: column;
    }

    header.body-header nav {
        margin-bottom: 10px;
    }

    .posts {
        grid-template-columns: auto;
    }

    img {
        width: 100%;
    }

    #theme-picker-selector {
        flex-direction: column;
    }

    #theme-picker-selector button {
        min-width: 50%;
    }
}

